z-index in the hero section fixe

--- a/src/components/heroSection/HeroSection.css
+++ b/src/components/heroSection/HeroSection.css
@@ -6,7 +6,6 @@
 
 video {
 	position: relative;
-	z-index: 999999;
 	width: 100%;
 	height: 100vh;
 	object-fit: cover;
